		 Where msg is 0/1 sending default sysmessages or not, the following args (up to 9 more) is/are the players to add to this party.
		 Note that by using PARTY.CREATE the player will be forced to enter the party, so you need to add your own "acceptance system".
		
24-10-2022, Raylde/Jhobean
[sphere.ini]: Added TimerCallUnit to be able use seconds instead of minutes with TimerCall

30-10-2022, Tolokio/Jhobean
- Fixed:  On Some freeshard it's possible to wear a spellbook in left hand (layer2). Now the book can be use in the hand instead of backpack only. (Issue #951)

04-11-2022, Drk84
- Fixed: LowerManaCost property didn't work properly. (Issue #949)

17-11-2022, Drk84
- Fixed: Faction & Slayer system -> bonus damage looks like not working. (Issue #964)
- Fixed: The SLAYER property will also be looked upon in a Spellbook on LAYER 2. (Issue #965)
- Added: In the source added method GetSpellbookLayer for retrieving a Spellbook in LAYER 1 or LAYER 2.

19-11-2022, Drk84
- Changed: AR (the old armour value) property can be displayed up to 65k. (Issue #968)
- Changed: The DAM property (for both characters and weapons) can be displayed up to 65k. (Issue #967)
- Added: t_armor_bone typedef (value 305). If you want to use it you need to add it in the core/defs_types_hardcoded.scp file under the typedef section. (Issue #890)
		
03-12-2022, Drk84
- Fix: Deleting a player while it's in a guild cause the server to crash. (Issue #971)

06-12-2022, Drk84
- [Sphere.ini] Added: New Sphere.ini settings "DisplayElementalResistance". (Issue #742) 
			   This setting allows to display the elemental resistances (Fire, Cold, Energy, Poison but not Physical) on status bar and tooltips, even if combat flag ELEMENTAL_ENGINE is disabled.
			   Remember that the old AC(and MODAR) system will be used if ELEMENTAL_ENGINE flag is disabled.

07-12-2022, Tolokio/Jhobean/Drk84
- Fixed: Possible fix for houses | ships removing keeps them stuck in totalcount without UID. (Issue #895)